feat(console/statistic): add campaign summary
