# docs/swagger.yaml
@@ -489,6 +489,17 @@ definitions:
       updated_at:
         type: string
     type: object
+  dto.CampaignSummaryResponse:
+    properties:
+      num_of_customers:
+        type: integer
+      num_of_orders:
+        type: integer
+      total_asa_cashback:
+        $ref: '#/definitions/dto.Cashback'
+      total_revenue:
+        type: number
+    type: object
   dto.Cashback:
     properties:
       distributed:
@@ -1552,6 +1563,15 @@ paths:
       consumes:
       - application/json
       description: Get summary statistic data
+      parameters:
+      - description: Time in RFC3339 format
+        in: query
+        name: since
+        type: string
+      - description: Time in RFC3339 format
+        in: query
+        name: until
+        type: string
       produces:
       - application/json
       responses:
@@ -1570,6 +1590,45 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get summary statistic data
+      tags:
+      - console
+  /api/v1/console/summary/:campaignId:
+    get:
+      consumes:
+      - application/json
+      description: Get campaign statistic data
+      parameters:
+      - description: Time range
+        in: path
+        name: campaignId
+        required: true
+        type: integer
+      - description: Time in RFC3339 format
+        in: query
+        name: since
+        type: string
+      - description: Time in RFC3339 format
+        in: query
+        name: until
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.CampaignSummaryResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/util.GeneralError'
+        "424":
+          description: Failed Dependency
+          schema:
+            $ref: '#/definitions/util.GeneralError'
+      security:
+      - ApiKeyAuth: []
+      summary: Get campaign statistic data
       tags:
       - console
   /api/v1/order/post-back:
